Added Instagram link

--- a/katsu.css
+++ b/katsu.css
@@ -295,7 +295,7 @@ body {
 }
 
 .my-katsu-navbar {
-  background-color: #311E1E !important; /* Your desired dark brown color */
+  background-color: #311E1E !important;
 }
 
 .navbar-link-item-text {
@@ -347,9 +347,9 @@ body {
 }  
 
 .tonkatsu-img {
-  width: 400px; /* Set equal width and height */
+  width: 400px;
   height: 400px;
-  border-radius: 40%; /* Makes it a circle */
+  border-radius: 40%;
   object-fit: cover;
   display: block;
   margin: 0 auto;
@@ -410,9 +410,9 @@ body {
 }
 
 .icon-wrapper {
-  display: inline-flex; /* Use inline-flex to align the icon with text */
-  align-items: center;  /* Vertically center the icon with the text */
-  margin: 0 5px;        /* Add some space around the icon */
+  display: inline-flex;
+  align-items: center;
+  margin: 0 5px;
 }
 
 .social-icon {
@@ -424,4 +424,15 @@ body {
   color: #8C7A7A;
   font-family: 'Kanit', sans-serif;
   font-style: light !important;
+}
+
+.homepage-paragraph {
+  color: white;
+  font-family: 'Kanit', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
 }
